[gd_scene load_steps=4 format=2]

[ext_resource path="res://script/horse_game.gd" type="Script" id=1]
[ext_resource path="res://assets/art/key_k.svg" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerAndHorse" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="background" type="Sprite" parent="."]

[node name="KeySwitch" type="Timer" parent="."]
wait_time = 2.0

[node name="RoundBegin" type="Timer" parent="."]
wait_time = 2.0

[node name="CurrentKey" type="Sprite" parent="."]
texture = ExtResource( 2 )

